Prevent text overflowing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 html {
     /*default settings for font and so on*/
-    font-size: 42px;
+    font-size: 55px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -29,13 +30,16 @@ body {
 }
 
 .display {
-    height: 20%;
+    min-height: 20%;
     padding:0 5px;
     display: flex;
     align-items: end;
     justify-content: end; 
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .buttons-section{
@@ -55,7 +59,7 @@ body {
 
 #clear, #delete {
     flex: 1;
-    font-size: 55%;
+    font-family: inherit;
 }
 
 .main-buttons {
@@ -72,5 +76,8 @@ body {
 button {
     border-radius: 5px;
     border: none;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 30px;
 }
 
